Replace margin by padding to fix missing border

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -664,7 +664,7 @@ table td,table th{
 	position:fixed;
 }
 .toc ul+ul{
-	margin-top:8px;
+	padding-top:8px;
 }
 .toc ul,
 .toc li{
